--- a/requirements.txt
+++ b/requirements.txt
@@ -1,143 +1,28 @@
-absl-py==0.7.0
-aniso8601==3.0.2
-appnope==0.1.0
-astor==0.7.1
-astroid==1.6.5
-backcall==0.1.0
-beautifulsoup4==4.6.3
-bleach==2.1.4
-bs4==0.0.1
-certifi==2018.8.24
-chardet==3.0.4
-click==6.7
-cloudpickle==0.7.0
-coloredlogs==10.0
+absl-py==0.9.0
+astor==0.8.1
 cycler==0.10.0
-Cython==0.29.6
-cytoolz==0.9.0.1
-dask==1.1.1
-decorator==4.3.0
-defusedxml==0.5.0
-Django==2.2.8
-dlib==19.15.0
-docopt==0.6.2
-EasyProcess==0.2.5
-entrypoints==0.2.3
-eth-hash==0.2.0
-eth-typing==2.1.0
-eth-utils==1.4.1
-face-recognition==1.2.3
-face-recognition-models==0.3.0
-facebook-sdk==3.1.0
-flasgger==0.9.2
-Flask==1.0.2
-Flask-Jsonpify==1.5.0
-Flask-RESTful==0.3.6
-Flask-SQLAlchemy==2.3.2
+Cython==0.29.15
 gast==0.2.2
-gazeml==0.1
-gender-detector==0.1.0
-grpcio==1.18.0
-h5py==2.9.0
-html5lib==1.0.1
-humanfriendly==4.17
-idna==2.7
-imageai==2.0.2
-imageio==2.4.1
-imutils==0.5.1
-ipykernel==4.8.2
-ipython==7.2.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.0
-isort==4.3.4
-itsdangerous==0.24
-jedi==0.12.1
-Jinja2==2.10
-jsonify==0.5
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-Keras==2.2.4
-Keras-Applications==1.0.7
-Keras-Preprocessing==1.0.9
-kiwisolver==1.0.1
-lazy-object-proxy==1.3.1
-libproc==0.2
-lxml==4.2.5
-Markdown==3.0.1
-MarkupSafe==1.0
-matplotlib==2.2.3
-mccabe==0.6.1
-messanger==1.0
-mistune==0.8.3
-mock==2.0.0
-moviepy==0.2.3.5
-nbconvert==5.3.1
-nbformat==4.4.0
-networkx==2.2
-notebook==5.7.8
-numpy==1.15.1
-object-detection==0.1
+google-pasta==0.1.8
+grpcio==1.27.2
+h5py==2.10.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+kiwisolver==1.1.0
+Markdown==3.2.1
+matplotlib==3.1.3
+numpy==1.18.1
+object-detection-0.1==0.1
 opencv-python==3.4.2.17
-pandas==0.24.1
-pandocfilters==1.4.2
-parso==0.3.1
-pbr==5.1.2
-pexpect==4.6.0
-pickleshare==0.7.4
-Pillow==6.2.0
-pipenv==2018.11.26
-pipreqs==0.4.9
-prometheus-client==0.3.1
-prompt-toolkit==2.0.8
-protobuf==3.6.1
-ptyprocess==0.6.0
-pyfcm==1.4.5
-Pygments==2.2.0
-pylint==1.9.3
-pyparsing==2.2.0
-pytesseract==0.2.5
-python-dateutil==2.7.3
-pytz==2018.5
-PyVirtualDisplay==0.2.1
-PyWavelets==1.0.1
-PyYAML==5.1
-pyzmq==17.1.2
-qtconsole==4.4.1
-requests==2.20.0
-requests-toolbelt==0.8.0
-scikit-image==0.14.2
-scikit-learn==0.20.2
-scipy==1.1.0
-selenium==3.141.0
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-six==1.11.0
-soupsieve==1.7.3
-SQLAlchemy==1.2.11
-sqlparse==0.3.0
-tabulate==0.8.3
-tensorboard==1.12.2
+opt-einsum==3.2.0
+Pillow==7.0.0
+protobuf==3.11.3
+pyparsing==2.4.6
+python-dateutil==2.8.1
+six==1.14.0
+tensorboard==1.15.0
 tensorflow==1.15.0
-tensorflow-estimator==1.13.0rc0
+tensorflow-estimator==1.15.1
 termcolor==1.1.0
-terminado==0.8.1
-testpath==0.3.1
-tflearn==0.3.2
-toolz==0.9.0
-tornado==5.1
-tqdm==4.30.0
-traitlets==4.3.2
-ujson==1.35
-urllib3==1.24.2
-virtualenv==16.3.0
-virtualenv-clone==0.5.3
-watermark==1.8.1
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==0.15.3
-widgetsnbextension==3.4.0
-wrapt==1.10.11
-yarg==0.1.9
+Werkzeug==1.0.0
+wrapt==1.12.0
